test/fails/bad_functions/extern7.lgl
declare a f(int x);  // Invalid return type

void main() {
    return;
}